<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.jetbrains.teamcity.plugins</groupId>
  <artifactId>gradle-runner</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <properties>
    <revision>${PluginVersion}</revision>
    <PluginVersion>${teamcity.version}</PluginVersion>
    <teamcity.version>2025.07</teamcity.version>
    <TC_LOCAL_REPO>local-repo</TC_LOCAL_REPO>
    <local.repo.path>${TC_LOCAL_REPO}</local.repo.path>

    <kotlin.version>2.0.21</kotlin.version>
    <kotlinx-coroutines.version>1.8.1</kotlinx-coroutines.version>
    <gradle-tooling-api.version>8.9</gradle-tooling-api.version>
    <slf4j.version>1.7.36</slf4j.version>
    <commons-cli.version>1.4</commons-cli.version>
    <jetbrains-annotations.version>23.0.0</jetbrains-annotations.version>
    <teamcity-maven-plugin.version>1.6.36</teamcity-maven-plugin.version>
    <license-maven-plugin.version>2.7.1</license-maven-plugin.version>

    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <argLine></argLine>
    <surefire.addOpens.argLine></surefire.addOpens.argLine>
  </properties>

  <organization>
    <name>JetBrains</name>
    <url>https://www.jetbrains.com</url>
  </organization>

  <modules>
    <module>gradle-runner-common</module>
    <module>gradle-runner-runtime</module>
    <module>gradle-runner-agent</module>
    <module>gradle-runner-server</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.jetbrains.teamcity</groupId>
        <artifactId>bom</artifactId>
        <version>${teamcity.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.teamcity.plugins</groupId>
        <artifactId>gradle-runner-common</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.teamcity.plugins</groupId>
        <artifactId>gradle-runner-runtime</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.teamcity.plugins</groupId>
        <artifactId>gradle-runner-agent</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-stdlib</artifactId>
        <version>${kotlin.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.kotlinx</groupId>
        <artifactId>kotlinx-coroutines-core</artifactId>
        <version>${kotlinx-coroutines.version}</version>
      </dependency>
      <dependency>
        <groupId>org.gradle</groupId>
        <artifactId>gradle-tooling-api</artifactId>
        <version>${gradle-tooling-api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-cli</groupId>
        <artifactId>commons-cli</artifactId>
        <version>${commons-cli.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains</groupId>
        <artifactId>annotations</artifactId>
        <version>${jetbrains-annotations.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-stdlib</artifactId>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>local-teamcity-artifacts</id>
      <url>file://${local.repo.path}</url>
    </repository>
    <repository>
      <id>teamcity-space</id>
      <url>https://packages.jetbrains.team/maven/p/tc/maven</url>
    </repository>
    <repository>
      <id>TeamCity</id>
      <url>https://download.jetbrains.com/teamcity-repository/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>gradle-libs-releases</id>
      <url>https://repo.gradle.org/gradle/libs-releases</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>teamcity-space</id>
      <url>https://packages.jetbrains.team/maven/p/tc/maven</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <finalName>${project.artifactId}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-maven-plugin</artifactId>
          <version>${kotlin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>org.jetbrains.teamcity</groupId>
          <artifactId>teamcity-maven-plugin</artifactId>
          <version>${teamcity-maven-plugin.version}</version>
          <executions>
            <execution>
              <id>teamcity-assemble-plugin</id>
              <goals>
                <goal>build</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${license-maven-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>test-compile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <jvmTarget>1.8</jvmTarget>
          <sourceDirs>
            <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
            <sourceDir>${project.basedir}/src/main/java</sourceDir>
          </sourceDirs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <executions>
          <execution>
            <id>default-compile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <id>default-testCompile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <id>java-compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>java-test-compile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>${project.parent.basedir}/build-support/MANIFEST.MF</manifestFile>
            <manifest>
              <addDefaultEntries>false</addDefaultEntries>
            </manifest>
            <addMavenDescriptor>false</addMavenDescriptor>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>${surefire.addOpens.argLine} ${argLine}</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <fileTemplate>${project.basedir}/build-support/third-party-libraries.ftl</fileTemplate>
          <thirdPartyFilename>third-party-libraries.json</thirdPartyFilename>
          <outputDirectory>${project.basedir}</outputDirectory>
          <excludedGroups>org.jetbrains.*|com.jetbrains.*</excludedGroups>
          <includeTransitiveDependencies>false</includeTransitiveDependencies>
          <sortArtifactByName>true</sortArtifactByName>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>java-9-plus-test-opens</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <surefire.addOpens.argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</surefire.addOpens.argLine>
      </properties>
    </profile>
  </profiles>
</project>
